--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -640,22 +640,29 @@ hr {
 .accordion__item {
     margin-bottom: 10px;
     border: 1px solid #e5e5e5;
+   
 }
 
 .accordion__item.active .accordion__content {
-    display: block;
+    transition: grid-template-rows 1s;
+    grid-template-rows: 1fr;
+    display: grid;
+
 }
 
 .accordion__item.active .accordion__header {
+    
     border-bottom-color: #e5e5e5;
 }
 
 .accordion__item.active .accordion__header:after {
-    transform: translateY(-50%) rotate(-45deg);
+    
+    transform: translateY(-50%) rotate(-45deg) ;
     margin-top: 5px;
 }
 
 .accordion__header {
+    
     padding: 15px 20px 15px 65px;
     position: relative;
 
@@ -664,6 +671,7 @@ hr {
 }
 
 .accordion__header:after {
+    
     content: "";
     display: block;
     width: 16px;
@@ -687,13 +695,16 @@ hr {
     z-index: 1;
 
     transform: translateY(-50%);
+
 }
 
 .accordion__content {
-    padding: 15px 20px;
-    display: none;
-
-    font-size: 15px;
+    overflow: hidden;
+    padding: 0px 20px;
+    display: grid;
+    grid-template-rows: 0fr;
+    transition: grid-template-rows 1.5s;
+    font-size: 17px;
     color: #999;
     font-style: italic;
     font-weight: 300;
@@ -1111,6 +1122,14 @@ hr {
 }
 
 
+.map__wide {
+    width: 100%;
+    padding: 0;
+}
+
+.map__wide:hover {
+    display: block;
+}
 
 /* Footer */
 .footer {
